[package]
name = "tinyweb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util"] }
reqwest = { version = "0", features = ["stream", "brotli", "zstd", "deflate", "gzip"] }
anyhow = "1"
tokio-tungstenite = "0"
futures-util = "0"
regex = "1"
url = "2"
tower-http = { version = "0", features = ["fs", "compression-full"] }
tower = { version = "0", features = ["util"] }
log = "0"
env_logger = "0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
moka = { version = "0", features = ["future"] }
mime_guess = "2"
wol-rs = "1"